# sqlx-data

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  readme.md
test-integration-mysql/: Cargo.toml
test-integration-mysql/tests/: alias_test.rs  blob_test.rs  casting_stress_test.rs  chrono_test.rs  count_query_validation_test.rs  cursor_isolation_test.rs  file_based_test.rs  generate_versions_test.rs  generics_signature_test.rs  insert_batch_test.rs  insert_json_advanced_test.rs  insert_json_test.rs  insert_test.rs  integration_test.rs  json_mysql_test.rs  limit_plus_one_test.rs  pagination_cursor_test.rs  pagination_serial_test.rs  pagination_slice_test.rs  parameter_naming_test.rs  pool_parameter_test.rs  pool_raw_parameter_test.rs  query_unchecked.rs  scope_test.rs  serial_simple_test.rs  stream_basic_test.rs  stream_test.rs  time_test.rs  tracing_test.rs  tuple_test.rs  unchecked_query_test.rs  uuid_test.rs  validation_integration_test.rs
test-integration-mysql/tests/fixtures/: alias_test_query.sql  count_users_by_birth_year.sql  files.sql  find_user_by_id.sql  get_user_info_tuple.sql  json_users.sql  top_users_by_age.sql  user_statistics.sql  users.sql
test-integration-mysql/tests/fixtures_datetime/: customers.sql
test-integration-mysql/tests/migrations/: 20241201120000_create_users.sql  20241202120000_create_documents.sql  20241203120000_create_files.sql
test-integration-mysql/tests/migrations_datetime/: 20241201000001_create_customers.sql  (+1 more)
test-integration-postgresql/: Cargo.toml
test-integration-postgresql/tests/: alias_test.rs  blob_test.rs  casting_stress_test.rs  chrono_test.rs  count_query_validation_test.rs  cursor_isolation_test.rs  generate_versions_test.rs  generics_signature_test.rs  insert_batch_test.rs  insert_json_test.rs  insert_test.rs  integration_test.rs  json_postgresql_test.rs  new_types_test.rs  pagination_cursor_test.rs  parameter_naming_test.rs  pool_parameter_test.rs  pool_raw_parameter_test.rs  serial_simple_test.rs  stream_test.rs  time_test.rs  tuple_test.rs  uuid_test.rs
(+132 files in other folders)
